kind/manifests/wiki/wiki-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-api
  namespace: wiki
  labels:
    app: wiki-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-api
  template:
    metadata:
      labels:
        app: wiki-api
        workspace.io/ext-authz: enabled
      annotations:
        sidecar.istio.io/proxyCPU: "10m"
        sidecar.istio.io/proxyMemory: "64Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"
    spec:
      containers:
      - name: wiki-api
        image: workspace/echo-server:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests: { cpu: 10m, memory: 32Mi }
          limits:   { cpu: 100m, memory: 64Mi }
        readinessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 5
