kind/manifests/wiki/wiki-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-api
  namespace: wiki
  labels:
    app: wiki-api
spec:
  type: ClusterIP
  selector:
    app: wiki-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
