kind/manifests/wiki/wiki-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: wiki-gateway
  namespace: wiki
spec:
  selector:
    istio: wiki-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - wiki.local
